# ForgeBreaker

./: .gitignore  CLAUDE.md  Dockerfile.frontend  PR_SPECS.md  PR_SPECS_PHASE2.md  Procfile  README.md  SESSION_START_PROMPT.md  collection.csv  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MODEL_CARD.md
forgebreaker/: __init__.py  config.py  main.py
forgebreaker/analysis/: __init__.py  assumptions.py  distance.py  ranker.py  stress.py
forgebreaker/api/: __init__.py  assumptions.py  chat.py  collection.py  decks.py  health.py  (+2 more)
frontend/: .env.production  Dockerfile  nixpacks.toml  package-lock.json  package.json
tests/: __init__.py  conftest.py  test_analysis.py  test_api_chat.py  test_api_collection.py  test_api_decks.py  test_api_distance.py  test_api_health.py  test_arena_export.py  test_arena_sanitizer.py  test_assumption_surfacing.py  test_budget.py  test_candidate_pool.py  test_canonical_card_resolver.py  test_card_database.py  test_card_legality_boundary.py  test_card_name_guard.py  test_collection_sanitizer.py  test_collection_search.py  test_cost_controls.py  test_db_models.py  test_db_operations.py  test_deck_builder.py  test_deck_improver.py  test_deck_size_invariant.py  test_failure_authority_boundary.py  test_failure_classification.py  test_filtered_pool_rollout.py  test_health.py  test_jobs.py  test_mcp_tools.py  test_ml_features.py  test_ml_inference.py  test_models.py  test_oracle_legality.py  test_owned_card_pool.py  test_parsers.py  test_payload_deduplication.py  test_payload_filtering.py  test_player_trust.py  (+9 more)
(+92 files in other folders)
